# Purchase

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
Common/: CMakeLists.txt  Constants.h  Items.h  MVC.h
Common/DataFormat/: OrderDetails.cpp  OrderDetails.h  OrderSummary.cpp  OrderSummary.h
Widgets/: CMakeLists.txt  QuantityWidget.cpp  QuantityWidget.h  QuantityWidget.ui
Widgets/DataUpdatation/: NewItemDialog.cpp  NewItemDialog.h  NewItemDialog.ui
Widgets/Overlay/: NavigationOverlay.cpp  NavigationOverlay.h  NavigationOverlay.ui
Widgets/TakeOrder/: TakeOrder.cpp  TakeOrder.h  TakeOrder.ui  TakeOrderMainOverlay.cpp  TakeOrderMainOverlay.h
